[framework] 升级 assertj 到 3.27.3